Twenty Fourteen: fix case where edit link goes to the top of content when only one left-aligned element exists. Props iamtakashi, fixes #26201. Built from https://develop.svn.wordpress.org/trunk@26356
git-svn-id: http://core.svn.wordpress.org/trunk@26257 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -1273,6 +1273,7 @@ a.post-thumbnail:hover {
 
 .entry-content .edit-link {
 	clear: both;
+	display: block;
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 1.3333333333;
